--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,41 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="md.luciddream.findaid">
+          package="md.luciddream.findaid">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait">
+                android:name=".MainActivity"
+                android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.CallerActivity"
-            android:label="@string/caller_str"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+                android:name=".activities.CallerActivity"
+                android:label="@string/caller_str"
+                android:parentActivityName=".MainActivity"
+                android:theme="@style/AppTheme.NoActionBar">
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="md.luciddream.findaid.MainActivity" />
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="md.luciddream.findaid.MainActivity"/>
         </activity>
         <activity
-            android:name=".activities.ReferenceActivity"
-            android:label="@string/reference_str"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+                android:name=".activities.ReferenceActivity"
+                android:label="@string/reference_str"
+                android:parentActivityName=".MainActivity"
+                android:theme="@style/AppTheme.NoActionBar">
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="md.luciddream.findaid.MainActivity" />
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="md.luciddream.findaid.MainActivity"/>
         </activity>
+
+        <service
+                android:name=".service.TraumaService"
+                android:exported="false">
+        </service>
     </application>
 
 </manifest>
