Added LocationHelper.java for accessing DB in background.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,16 @@
                 android:name=".service.TraumaService"
                 android:exported="false">
         </service>
+
+        <activity
+                android:name=".activities.AddReferenceItemActivity"
+                android:label="@string/title_activity_add_reference_item"
+                android:parentActivityName=".activities.ReferenceActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="md.luciddream.findaid.activities.ReferenceActivity"/>
+        </activity>
     </application>
 
 </manifest>
